<resources>
    <string name="app_name" translatable="false">MonUP</string>

    <!-- calculator -->
    <string name="title_calculator" translatable="false">Tools</string>
    <string name="calculator_error">Please fill in all the fields</string>
    <string name="calculator_title">Revenue Calculator</string>
    <string name="calculator_net_revenue">Revenue:</string>
    <string name="calculator_income">Income: </string>
    <string name="calculator_calculate">Calculate</string>
    <string name="calculator_purchase_price">Purchase price:</string>
    <string name="calculator_selling_price">Selling price:</string>

    <!-- chart -->
    <string name="title_activity_chart" translatable="false">ChartActivity</string>
    <string name="chart_button_7gg">7 days</string>
    <string name="chart_button_90gg">90 days</string>
    <string name="chart_data_error">Data not available</string>
    <string name="chart_button_30gg">30 days</string>
    <string name="chart_price_label">Price:</string>

    <!-- coins list -->
    <string name="title_dashboard" translatable="false">Market Prices</string>
    <string name="coins_request_error">Unable to fetch coin list, please try later</string>
    <string name="daily" translatable="false">Day</string>
    <string name="weekly" translatable="false">Week</string>
    <string name="list_position_place_holder" translatable="false">n.</string>
    <string name="coin_name_place_holder" translatable="false">Coin name</string>
    <string name="price_place_holder" translatable="false">000000</string>
    <string name="percentage_variation_place_holder" translatable="false">+100.00%</string>
    <string name="imageView_content_description" translatable="false" />
    <string name="rank" translatable="false">Rank</string>
    <string name="hour" translatable="false">Hour</string>
    <string name="percentage_variation_sym" translatable="false">&#37; </string>
    <string name="percentage_variation_title">Change</string>
    <string name="price_title">Price</string>
    <string name="coin_name">Coin</string>
    <string name="percentage_variation_1h_text" translatable="false">H</string>
    <string name="percentage_variation_1d_text" translatable="false">D</string>
    <string name="percentage_variation_1w_text" translatable="false">W</string>

    <!-- about -->
    <string name="action_settings" translatable="false">About</string>
    <string name="title_activity_about" translatable="false">MonUP - v2.4</string>
    <string name="github" translatable="false">https://github.com/grosa1/MonUP-App</string>
    <string name="about_thanks" translatable="false">Credits</string>
    <string name="about_support">Support the app!</string>
    <string name="developed_by" translatable="false">Contributors</string>

    <!-- widget -->
    <string name="appwidget_text">MonUP</string>
    <string name="configure_widget">Configure Widget</string>
    <string name="reset_widget">Reset Widget</string>
    <string name="widget_resetted">Widget has been reset</string>
    <string name="add_widget">Add widget</string>
    <string name="add_coin">Add</string>
    <string name="configure_description">Look for a coin to add:</string>
    <string name="search_coin_hint">Search Coin</string>
    <string name="coin_already_observed">Coin is already in the Observer</string>
    <string name="coin_added_to_observer">Coin added to the Observer: </string>
    <string name="coin_removed">Coin removed</string>
    <string name="coin_observed">Click on a coin observed to remove it:</string>
    <string name="no_coin_to_observe">Insert at least one coin</string>
    <string name="incorrect_coin_name">Insert correct name or select once from list</string>
    <string name="no_active_widget">Add widget in home first</string>
    <string name="widget_refreshed">Widget refreshed</string>
    <string name="not_connected">Check your connection and retry</string>

    <!-- news and article -->
    <string name="news_text">News</string>
    <string name="news_title_place_holder">News title</string>
    <string name="news_date_place_holder">News Date</string>
    <string name="article_url">Go to original post</string>
    <string name="news_refreshed">News refreshed</string>
    <string name="news_source">Source:</string>

    <!--  settings  -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="setting_disabled" translatable="false">OFF</string>
    <string name="setting_enabled" translatable="false">ON</string>
    <string name="setting_color_mode">Dark Mode</string>


</resources>
