<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coin_list_item"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="2dp"
    android:fontFamily="sans-serif">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/imageView_content_description"
        android:src="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/coin_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="4"
        android:text="@string/coin_name_place_holder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_weight="3"
        android:gravity="end"
        android:text="@string/price_place_holder"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/hour"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/percentage_variation_1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:text="@string/percentage_variation_place_holder"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/daily"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/percentage_variation_1d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:text="@string/percentage_variation_place_holder"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/weekly"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/percentage_variation_1w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="3dp"
                android:gravity="center"
                android:text="@string/percentage_variation_place_holder"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>