<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="giovanni.tradingtoolkit.settings.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/color_mode"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:checked="false"
            android:switchMinWidth="56dp"
            android:text="@string/setting_color_mode"
            android:textColor="@color/textColorPrimary"
            android:textOff="@string/setting_disabled"
            android:textOn="@string/setting_enabled"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
