<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin">

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/appwidget_text"
            android:textColor="@color/widgetTextColor"
            android:textSize="20sp"
            android:textStyle="" />

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rank"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_coin_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/coin_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/price_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_percentage_variation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/percentage_variation_sym"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:name="giovanni.tradingtoolkit.marketprices.CoinsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="giovanni.tradingtoolkit.marketprices.CoinsFragment"
        tools:listitem="@layout/coin_list_item" />

</LinearLayout>


