<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_list_item"
    android:layout_width="match_parent"
    android:layout_height="168dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="2dp"
    android:fontFamily="sans-serif">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:contentDescription="@string/imageView_content_description"
        android:layout_gravity="top"
        android:src="@color/colorPrimaryDark" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="1dp">

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:text="@string/news_title_place_holder"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/news_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="8"
            android:gravity="end"
            android:text="@string/price_place_holder"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>