<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/FragmentCalculator"
    tools:context="giovanni.tradingtoolkit.calculator.CalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_calculator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:text="@string/calculator_title"
            android:textColor="@color/widgetTextColor"
            android:background="@color/colorPrimary"
            android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editCurrentUnitPrice"
            android:layout_width="154dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="e.g., 15000 BTC"
            android:inputType="numberDecimal"
            android:layout_marginStart="21dp"
            android:layout_below="@+id/textView1"
            android:layout_alignParentStart="true"
            android:autofillHints=""
            android:textColor="@color/calculatorTextColor"
            android:backgroundTint="@color/calculatorHintColor" />

        <EditText
            android:id="@+id/editExpectedUnitPrice"
            android:layout_width="154dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="e.g., 17000 BTC"
            android:inputType="numberDecimal"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:autofillHints=""
            android:textColor="@color/calculatorTextColor"
            android:backgroundTint="@color/calculatorHintColor" />

        <EditText
            android:id="@+id/editBudget"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="e.g., 1000€"
            android:inputType="numberDecimal"
            android:layout_marginTop="53dp"
            android:layout_below="@+id/editCurrentUnitPrice"
            android:layout_alignStart="@+id/editCurrentUnitPrice"
            android:autofillHints=""
            android:textColor="@color/calculatorTextColor"
            android:backgroundTint="@color/calculatorHintColor" />

        <TextView
            android:id="@+id/textViewRevenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Total"
            android:textAlignment="center"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_alignTop="@+id/editBudget"
            android:layout_alignStart="@+id/editExpectedUnitPrice"
            android:layout_alignBottom="@+id/editBudget"
            android:layout_alignEnd="@+id/editExpectedUnitPrice" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/calculator_calculate"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/editBudget"
            android:layout_alignEnd="@+id/textViewRevenue"
            android:layout_alignStart="@+id/editBudget" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_net_revenue"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_above="@+id/textViewRevenue"
            android:layout_alignStart="@+id/textViewRevenue"
            android:layout_alignEnd="@+id/textViewRevenue" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewRevenue"
            android:layout_alignStart="@+id/editBudget"
            android:text="Budget:"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignEnd="@+id/editBudget" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/calculator_selling_price"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignEnd="@+id/editExpectedUnitPrice"
            android:layout_alignStart="@+id/editExpectedUnitPrice" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_purchase_price"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editCurrentUnitPrice"
            android:layout_alignEnd="@+id/editCurrentUnitPrice" />

        <TextView
            android:id="@+id/textViewCurrentQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editCurrentUnitPrice"
            android:layout_below="@+id/editCurrentUnitPrice"
            android:layout_toEndOf="@+id/textView6"
            android:text="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewExpectedQuantity"
            android:layout_alignStart="@+id/editCurrentUnitPrice"
            android:text="Qt: " />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewExpectedQuantity"
            android:layout_alignStart="@+id/editExpectedUnitPrice"
            android:text="Qt: " />

        <TextView
            android:id="@+id/textViewExpectedQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editExpectedUnitPrice"
            android:layout_below="@+id/editExpectedUnitPrice"
            android:layout_toEndOf="@+id/textView7"
            android:text="" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewRevenue"
            android:layout_below="@+id/textViewRevenue"
            android:text="@string/calculator_income" />

        <TextView
            android:id="@+id/textTotalGrossResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignEnd="@+id/textViewRevenue"
            android:layout_toEndOf="@+id/textView9"
            android:text="" />
    </RelativeLayout>

    </LinearLayout>

</ScrollView>
